# capstone-ids

./: .gitignore  README.md  main.py  pyproject.toml
apps/ids-cli/: main.py  pyproject.toml
src/: download_model.py
src/ids_cli/: main.py
