[project]
name = "capstone-ids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "ruff>=0.14.0",
    "scikit-learn>=1.7.2",
    "xgboost>=3.0.5",
]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]