[project]
name = "capstone-ids"
version = "0.1.0"
description = "An intrusion detection system built with the XGBoost library and the CICIDS2017 dataset"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imblearn>=0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "ruff>=0.14.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.0.5",
]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]
